tests/fixtures/invalid/bytes_rshift_float.py
# Cannot right shift Bytes and Float
x: float = b"hello" >> 1.0
